# spec-kit

./: .env.example  .gitignore  README.md  pyproject.toml  sitecustomize.py  specify.prompt.yml
.github/workflows/: issue-triage.lock.yml  issue-triage.md
docs/: benchmarking.md  toc.yml
specify_cli/: __init__.py
specs/001-add-terminalbench-benchmark/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-add-terminalbench-benchmark/contracts/: tools-benchmarks-cli.md
specs/benchmarks/: README.md
src/specify_cli/terminal_bench/: __init__.py
src/specify_cli/terminal_bench/agents/: __init__.py  spec-kit-opencode-setup.sh.j2  spec_kit_opencode.py
src/tools/: __init__.py
src/tools/benchmarks/: __init__.py  __main__.py  baselines.py  cli.py  config.py  orchestrator_agent.py  reporting.py  runner.py  scenarios.py
