[project]
name = "specify-cli"
version = "0.0.4"
description = "Setup tool for Specify spec-driven development projects"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.optional-dependencies]
tools = [
    "typer[all]",
    "litellm>=1.35.0",
    "python-dotenv>=1.0.1",
    "terminalbench-cli>=0.2.0",
]

[project.scripts]
specify = "specify_cli:main"
spec-tools = "tools.benchmarks.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/specify_cli",
    "src/tools",
]
